# clean_french_irve

./: LICENSE  README.md  pyproject.toml
.github/workflows/: scrap_etalab.yml
app/: analyse_irve_data.py  clean_irve_data.py  combined_irve_data.py  complete_irve_data_followup.py  utils.py
data/: irve_combined_data_follow_up.csv  irve_data_follow_up.csv
